# yt-dlp-python

./: .gitignore  README.md  ROADMAP.md  downloader.py  pyproject.toml  requirements-dev.txt  urls.example.txt
.github/workflows/: ci.yml  release.yml
tests/: test_downloader.py
tools/: write_icon.py
